src/static/styles/dark-mode.css
[data-theme="dark"] {
  background-color: #111 !important;
  color: #eee;
}

[data-theme="dark"] .bg-light {
  background-color: #333 !important;
}

[data-theme="dark"] .bg-white {
  background-color: #000 !important;
}

[data-theme="dark"] .bg-black {
  background-color: #eee !important;
}


[data-theme="dark"] .form-control {
  background-color: #495057 !important;
  color: #fff  !important;
}

